# Ennio-Editor

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  ennio.exe.stackdump  find.glade~  io.github.michaelrutherford.Ennio-Editor.gresource.xml  io.github.michaelrutherford.Ennio-Editor.gschema.xml  menus.ui  prefs.glade  style.css
src/: application.vala  document.vala  documentlabel.vala  ennio.vala  find.vala  notebook.vala  prefrence.vala  window.vala
